--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About Bloccit</h1>
 <p>Created by: Theresa Palid</p>
+
+<%= link_to "LinkedIn", "https://www.linkedin.com/in/theresapalid", class: "social-btn" %>
