--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -13,6 +13,10 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter question details" %>
        </div>
        <div class="form-group">
+        <%= f.check_box :resolved %>
+        <%= f.label "Resolved" %>
+       </div>
+       <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
      <% end %>
