--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @post.title %></h1>
-<%= link_to "Edit", edit_post_path(@post), class: "btn btn-sucess" %>
+<% if policy(@post).edit? %>
+    <%= link_to "Edit", edit_post_path(@post), class: "btn btn-sucess" %>
+<% end %>
 <p><%= @post.body %></p>
