--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
     <h1>Bloccit</h1>
     <p>Bloccit is a resource for sharing links with your friends!</p>
     <p>
-        <%= link_to "Sign In", new_user_session_path, class: "btn btn-primary" %>
-        <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary" %>
+        <% link_to "Sign In", new_user_session_path, class: "btn btn-primary" %>
+        <% link_to "Sign Up", new_user_registration_path, class: "btn btn-primary" %>
     </p>
 </div>
 
