--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
 <div class="row">
     <div class='col-md-8'>
         <p><%= @post.body %></p>
+        <%= link_to "Summary", topic_post_summary_path(@topic, @post), class: "btn btn-success" %>
     </div>
     <div class='col-md-4'>
         <% if policy(@post).edit? %>
