--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,11 +9,11 @@
             </ul>
         </div>
     <% end %>
-    <% form_group_tag(post.errors[:title]) do %>
+    <%= form_group_tag(post.errors[:title]) do %>
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
     <% end %>
-    <% form_group_tag(post.errors[:body]) do %>
+    <%= form_group_tag(post.errors[:body]) do %>
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
     <% end %>
