--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,11 +3,16 @@
 <div class="row">
     <div class='col-md-8'>
         <p><%= @post.body %></p>
-        <%= link_to "Summary", topic_post_summary_path(@topic, @post), class: "btn btn-success" %>
-    </div>
+            <% if @summary %>
+                <%= link_to "Summary", topic_post_summary_path(@topic, @post), class: "btn btn-success" %>
+            <% elsif @post.summary == nil && policy(@post).edit? %>
+                <%= link_to "Add Summary", new_topic_post_summary_path(@topic, @post), class: 'btn btn-success' %>
+            <% end %>
+            </div>
     <div class='col-md-4'>
         <% if policy(@post).edit? %>
             <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: "btn btn-sucess" %>
         <% end %>
+     
     </div>
 </div>
