--- a/app/views/summaries/new.html.erb
+++ b/app/views/summaries/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Summaries#new</h1>
-<p>Find me in app/views/summaries/new.html.erb</p>
+<h1>New Summary</h1>
+<div class="row">
+    <div class="col-md-8">
+        <%= form_for [@topic, @post, @summary] do |f| %>
+            <div class="form-group">
+                <%= f.label :description %>
+                <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter Summary" %>
+            </div>
+            <div class="form-group">
+                <%= f.submit "Save", class: "btn btn-success" %>
+            </div>
+        <% end %>
+    </div>
+</div>
