--- a/app/views/summaries/show.html.erb
+++ b/app/views/summaries/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Summaries#show</h1>
-<p>Find me in app/views/summaries/show.html.erb</p>
+<h1>Summary of <%= @post.title %></h1>
+
+<div class="row">
+    <div class="col-md-8">
+        <p><%= @summary.description %></p>
+    </div>
+    <div class='col-md-4'>
+        <%= link_to "Edit", edit_topic_post_summary_path(@topic, @post), class: "btn btn-success" %>
+    </div>
+</div>
