--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [topic, post] do |f| %>
     <% if post.errors.any? %>
         <div class="alert alert-danger">
-            <h4> There are <%= pluralize(post.error.count, "error") %>. </h4>
+            <h4> There are <%= pluralize(post.errors.count, "error") %>. </h4>
             <ul>
                 <% post.errors.full_messages.each do |msg| %>
                     <li><%= msg %></li>
@@ -17,6 +17,11 @@
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
     <% end %>
+    <div class="form-group">
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+      <%= f.hidden_field :image_cache %>
+    </div>
     <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
