--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,7 @@
             <%= @post.user.name %>
         </small>
         <p><%= markdown_to_html @post.body %></p>
+        <p><%= image_tag(@post.image.post.url)if @post.image? %></p>
     </div>
     <div class='col-md-4'>
         <% if policy(@post).edit? %>
