--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,7 +11,12 @@
                 <div class="media">
                     <div class="media-body">
                         <h4 class="media-heading">
+                            <div class= "media-left">
+                            <%= image_tag(post.image.small.url)if post.image? %>
+                            </div>
+                            <div class= "media-right">
                             <%= link_to (markdown_to_html post.title), [@topic, post] %>
+                            </div>
                         </h4>
                         <small>
                             <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
