--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
     <div class='col-md-8'>
         <p><%= @post.body %></p>
             <% if @post.summary %>
-                <%= link_to "Summary", topic_post_summary_path(@topic, @post), class: "btn btn-success" %>
+                <%= link_to "Summary", topic_post_summary_path(@topic, @post, @post.summary), class: "btn btn-success" %>
             <% elsif %>
                 <%= link_to "Add Summary", new_topic_post_summary_path(@topic, @post), class: 'btn btn-success' %>
             <% end %>
