--- a/app/views/summaries/new.html.erb
+++ b/app/views/summaries/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Summary</h1>
 <div class="row">
     <div class="col-md-8">
-        <%= form_for [@topic, @post, @post.summary] do |f| %>
+        <%= form_for @summary, url: topic_post_summary_path do |f| %>
             <div class="form-group">
                 <%= f.label :description %>
                 <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter Summary" %>
