--- a/app/views/summaries/show.html.erb
+++ b/app/views/summaries/show.html.erb
@@ -5,6 +5,6 @@
         <p><%= @summary.description %></p>
     </div>
     <div class='col-md-4'>
-        <%= link_to "Edit", edit_topic_post_summary_path(@topic, @post), class: "btn btn-success" %>
+        <%= link_to "Edit", edit_topic_post_summary_path(@topic, @post, @summary), class: "btn btn-success" %>
     </div>
 </div>
