--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,13 +15,6 @@
             <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: "btn btn-sucess" %>
         <% end %>
     </div>
-    <div class='col-md-8'>
-        <% @post.comments.each do |comment| %>
-            <%= render partial: 'comments/comment', locals: comment %>
-        <% end %>
-    </div>
-    <div class="col-md-8">
-    <%= render partial: 'comments/form', locals: { topic: @topic, post: @post } %>
-    </div>
+    <%= render @comments %>
 </div>
 
