--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
-<div class="col-md-8">
-<%= comment.body %></br>
-submitted <%= time_ago_in_words(comment.created_at) %> ago by
-<%= comment.user.name %>
-</div>
-# undefined method name for nil class
-# why is the class nil here, but not in the first two instances?
+<p> <%= comment.body %>
+<% if comment.user %>
+    <small>
+        <em><%comment.user.name || comment.user.email %></em>
+    </small>
+<% end %>
+    </p>
