--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,14 @@
             <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: "btn btn-sucess" %>
         <% end %>
     </div>
+    <div class="col-md-8">
+    <h3> Comments </h3>
     <%= render @comments %>
+    </div>
+    <div class="col-md-8">
+    <h3> Add Comment </h3>
+    <%= render partial: 'comments/form', locals: { topic: @topic, post: @post } %>
+    </div>
 </div>
+   
 
