--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,10 +19,12 @@
     <h3> Comments </h3>
     <%= render @comments %>
     </div>
+    <% if policy(@comments).new? %>
     <div class="col-md-8">
     <h3> Add Comment </h3>
     <%= render partial: 'comments/form', locals: { topic: @topic, post: @post } %>
     </div>
+    <% end %>
 </div>
    
 
