--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,19 @@
-<p> <%= comment.body %>
-<% if comment.user %>
-    <small>
-        <em><%comment.user.name || comment.user.email %></em>
-    </small>
-<% end %>
-    </p>
+<div class="media">
+    <div class="media-left">
+        <% if false %>
+        <%= image_tag(comment.user.avatar.small.url, class: "media-object") if comment.user.avatar? %>
+        <% end %>
+    </div>
+    <div class="media-body">
+        <small>
+            <% if false %>
+            <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+            <% end %>
+            <% if policy(comment).destroy? %>
+                <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+            <% end %>
+        </small>
+        <p><%= comment.body %></p>
+    </div>
+</div>
+
