--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
             <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
             <% end %>
             <% if policy(comment).destroy? %>
-                <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+                <%= link_to "Delete", [@post, comment], method: :delete %>
             <% end %>
         </small>
         <p><%= comment.body %></p>
