--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
     <% if policy(@comments).new? %>
     <div class="col-md-8">
     <h3> Add Comment </h3>
-    <%= render partial: 'comments/form', locals: { topic: @topic, post: @post } %>
+    <%= render partial: 'comments/form', locals: {post: @post } %>
     </div>
     <% end %>
 </div>
