Checkpoint 46 Comment View Fixed

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <p> <%= comment.body %>
-<% if comment.user %>
-    <small>
-        <em><%comment.user.name || comment.user.email %></em>
-    </small>
-<% end %>
-    </p>
+    <% if comment.user %>
+        <small>
+            <em><%= comment.user.name || comment.user.email %></em>
+        </small>
+    <% end %>
+</p>
