--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
- 
+  //"bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
@@ -23,4 +23,9 @@
 
 .nav {
  margin-top: 5px;
+}
+
+.vote-arrows {
+    width: 40px;
+    text-align: center;
 }
