--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <div class="media">
+<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
     <div class="media-left">
         <% if false %>
         <%= image_tag(comment.user.avatar.small.url, class: "media-object") if comment.user.avatar? %>
@@ -24,3 +25,4 @@
         </small>
     <% end %>
 </p>
+<% end %>
