--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,6 +25,7 @@
                 <%= pluralize(@post.down_votes, 'down vote') %>
             </small>
         </div>
+        <%= render partial: 'favorites/favorite', locals: { post: @post } %>
     </div>
     <div class="col-md-8">
     <h3> Comments </h3>
