--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -29,7 +29,7 @@
     </div>
     <div class="col-md-8">
     <h3> Comments </h3>
-    <%= render @comments %>
+    <%= render partial: 'comments/comment', collection: @comments %>
     </div>
     <% if policy(@comments).new? %>
     <div class="col-md-8">
