--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       </div>
     <% elsif flash[:alert] %>
       <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</div>
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash[:alert] %>
       </div>
     <% end %>  
