--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -28,13 +28,17 @@
         <%= render partial: 'favorites/favorite', locals: { post: @post } %>
     </div>
     <div class="col-md-8">
-    <h3> Comments </h3>
-    <%= render partial: 'comments/comment', collection: @comments %>
+        <h3> Comments </h3>
+        <div class='js-comments'>
+            <%= render partial: 'comments/comment', collection: @comments %>
+        </div>
     </div>
     <% if policy(@comments).new? %>
     <div class="col-md-8">
     <h3> Add Comment </h3>
-    <%= render partial: 'comments/form', locals: {post: @post } %>
+        <div class='new-comment'>
+            <%= render partial: 'comments/form', locals: {post: @post } %>
+        </div>
     </div>
     <% end %>
 </div>
